--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "cors": "^2.8.5",
         "firebase": "^4.5.0",
         "fs": "0.0.1-security",
+        "moment": "^2.26.0",
         "tls": "0.0.1",
         "unirest": "^0.6.0",
         "uuid": "^3.4.0",
