--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "guzzle/guzzle": "~3.0",
+        "guzzlehttp/guzzle": "7.0",
         "kriswallsmith/buzz": "dev-master",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
